--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -25,5 +25,6 @@
     </div>
     <div class="welcome">
     	<h1><div class="up">Welcome</div>Добро пожаловать в Хмельхаус!</h1>
+    	<a href="/" class="button">Забронировать столик</a>
     </div>
 </section>
