--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
               Моя Корзина: <%= link_to 'Show', cart_item_show_path %><br>
               Продукты: <%= link_to 'Show', products_path %><br>
               Новости: <%= link_to 'Show', events_path %><br>
-              Мои заказы: <%= link_to 'Show', orders_path %><br>
+              Мои заказы: <%= link_to 'Show', orders_list_show_path %><br>
         </ul>
     </nav>
     <!-- МЕНЮ ОФФ -->
