--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,45 +1,36 @@
+<section class="news">
+<div class="header">
+  <div class="slider">
+      <div class="slider-overlay">
+        <a href="/" class="logo">
+        </a>
+      </div>
+           <ul class="slidewrapper">
+                <li class="slide" style="background-image:url('/assets/slide1.jpg')"></li>
+        <li class="slide" style="background-image:url('/assets/slide1.jpg')"></li>
+        <li class="slide" style="background-image:url('/assets/slide1.jpg')"></li>
+        <li class="slide" style="background-image:url('/assets/slide1.jpg')"></li>
+            </ul>
+  </div>
+</div>
+<div class="content">
+<h1>Новости и акции</h1>
 <p id="notice"><%= notice %></p>
-
-<h1>Events</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Slave</th>
-      <th>Image</th>
-      <th>Link</th>
-      <th>tag</th>
-      <th>Url</th>
-      <th>Link</th>
-      <th>Sort</th>
-      <th>Count</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
+<div class="table news">
     <% @events.each do |event| %>
-      <tr>
-        <td><%= event.title %></td>
-        <td><%= event.description %></td>
-        <td><%= event.slave %></td>
-        <td><%= event.image %></td>
-        <td><%= event.link %></td>
-        <td><%= event.tag %></td>
-        <td><%= event.url %></td>
-        <td><%= event.link %></td>
-        <td><%= event.sort %></td>
-        <td><%= event.count %></td>
-        <td><%= link_to 'Show', event %></td>
-        <td><%= link_to 'Edit', edit_event_path(event) %></td>
-        <td><%= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+       <div class="iteam">
+        <a href="<%= event.link %>">
+          <div class="photo"><%= event.image %></div>
+          <div class="title"><h3><%= event.title %></h3></div>
+          <div class="time"><%= event.tag %></div>
+        </a>
+      </div>
     <% end %>
-  </tbody>
+</div>
 </table>
 
 <br>
 
 <%= link_to 'New Event', new_event_path %>
+</div>
+</section>
