--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,23 +15,23 @@
     <nav class="nav">
         <label for="nav-toggle" class="nav-toggle-off" onclick></label>
         <ul>
-            <%= render 'devise/menu/registration_items' %>
-            <%= render 'devise/menu/login_items' %>
-            <li><a href="#1">Меню</a>
-            <li><a href="#2">Новости</a>
-            <li><a href="#3">Забронировать столик</a>
-            <li><a href="#4">Контакты</a>
-            <li><a href="#4">Личный кабинет</a>
-            <li><a href="#4">Корзины</a>
-            <li><a href="#4">Избарнное</a>
-            <li><a href="#4">Выход</a>
-              Моя Корзина: <%= link_to 'Show', cart_item_show_path %><br>
-              Продукты: <%= link_to 'Show', products_path %><br>
-              Новости: <%= link_to 'Show', events_path %><br>
-              Мои заказы: <%= link_to 'Show', orders_list_show_path %><br>
+            <li class="user">
+              <div class="avatar"></div>
+              <div class="name">Владимир Каленберг</div>
+              <div class="phone">+79997883625</div>
+            </li>
+            <li class="menu"><%= link_to 'Меню доставки', products_path %></li>
+            <li class="bron"><a href="#3">Забронировать столик</a></li>
+            <li class="news"><a href="#2"><%= link_to 'Новости', events_path %></a></li>
+            <li class="otziv"><a href="#4">Оставить отзыв</a></li>
+            <li class="cont"><a href="#4">Контакты</a></li>
+            <li class="small user"><a href="#4">Личный кабинет</a></li>
+            <li class="small cart"><%= link_to 'Корзина', cart_item_show_path %></li>
+            <li class="small logout"><%= render 'devise/menu/login_items' %></a></li>
         </ul>
     </nav>
     <!-- МЕНЮ ОФФ -->
+    <div class="overlay"></div>
     <div class="sections">
       <%= yield %>
     </div>
