header footer navbar sidebar partial

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,5 +14,6 @@
       <%= render 'devise/menu/login_items' %>
     </ul>
     <%= yield %>
+    <%= render partial: 'application/footer', locals: { var1: 'fdsafds', var2: 'var2fdasfds' }%>
   </body>
 </html>
