--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,6 +1,7 @@
 <h1>Main#index</h1>
 <p>Find me in app/views/main/index.html.erb</p>
-Моя Корзина: <%= link_to 'Show', cart_item_show_path %><br>
+
+Моя Корзина: <%= link_to 'Show', cart_item_show_path %> | Товаров в корзине: <%= current_cart.count %><br>
 Продукты: <%= link_to 'Show', products_path %><br>
 Новости: <%= link_to 'Show', events_path %><br>
 Мои заказы: <%= link_to 'Show', orders_list_show_path %><br>
