products, events, current_cart

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -130,7 +130,7 @@ h3{
   font-weight: bold;
   text-transform: uppercase;
   line-height: 1.2;
-  text-align: center;
+  text-align: left;
   z-index: 5;
 }
 h4{
@@ -144,8 +144,10 @@ h5{
 	margin:0 0 5px 0;
 }
 p{
-	line-height:16px;
-	margin:0px 0px 20px 0px;
+	font-size: 14px;
+	line-height:18px;
+	letter-spacing: 1px;
+	margin:20px 0px 20px 0px;
 }
 a{
 	font-size:12px;
@@ -163,7 +165,7 @@ input[type="text"], input[type="password"], input[type="email"], input[type="tel
 	font-size: 16px;
 	background:rgba(0,0,0,0.5);
 	font-weight: 300;
-	padding: 20px 10px 20px 10px !important;
+	padding: 20px 10px 20px 10px;
 	box-sizing: border-box;
 	color:#fff;
 
@@ -206,6 +208,21 @@ input[type="submit"]:hover, button[type="submit"]:hover, .button:hover{
     background: #d3ab38;
 }
 
+option, select{
+	display: block;
+    width: 180px;
+    text-align: center;
+    margin: 20px auto 0;
+    padding: 10px 20px 10px 20px;
+    background: #f1c854;
+    font-size: 16px;
+    letter-spacing: 1px;
+    font-weight: bold;
+    color: #000;
+    border-radius: 3px;
+    border:0px;
+}
+
 /*МЕНЮ*/
 .nav {
     width: 320px;
@@ -228,6 +245,7 @@ input[type="submit"]:hover, button[type="submit"]:hover, .button:hover{
 	.nav:after{
 		content:"";
 	    width: 100%;
+	    min-height: 100%;
 	    height: 100%;
 	    position: absolute;
 	    top: 0;
@@ -343,6 +361,27 @@ input[type="submit"]:hover, button[type="submit"]:hover, .button:hover{
 			line-height: 25px;
 			letter-spacing: 1px;
 		}
+.back{
+	width: 40px;
+	height: 40px;
+	display: block;
+	position: absolute;
+    left: 20px;
+    top: 20px;
+    padding: 5px;
+    color: #fff;
+    cursor: pointer;
+    padding:5px;
+    line-height: 1;
+    z-index: 2;
+    -webkit-transition: color .25s ease-in-out;
+    -moz-transition: color .25s ease-in-out;
+    transition: color .25s ease-in-out;
+    background-image: url('/assets/ico_arrow_left.svg'); 
+    background-position: center;
+	background-size: 35px;
+	background-repeat: no-repeat;
+}
 
 .nav-toggle-on{
     position: absolute;
@@ -416,11 +455,11 @@ input[type="submit"]:hover, button[type="submit"]:hover, .button:hover{
 }
 .overlay{
 	background: rgba(0,0,0,0.5);
-	position: absolute;
+	position: fixed;
 	top:0;
 	left: 0;
 	width: 100%;
-	height: 100%;
+	height: 100vh;
 	z-index: 9;
 	display: none;
 }
@@ -428,7 +467,6 @@ input[type="submit"]:hover, button[type="submit"]:hover, .button:hover{
 	width: 100%;
     top: 0;
     padding:0 0 0 0;
-   	min-height:100vh;
 }
 	.sections section{
 		width: 100%;
@@ -447,19 +485,32 @@ input[type="submit"]:hover, button[type="submit"]:hover, .button:hover{
 	.content{
     	border-top: 3px solid #f1c854;
 	}
+		.content .text{
+	    	width:100%;
+	    	max-width: 1000px;
+	    	box-sizing:border-box;
+	    	margin: auto;
+		}
+
+		.content .field{
+	    	width:100%;
+	    	max-width: 1000px;
+	    	box-sizing:border-box;
+	    	margin: auto;
+		}
 
 .header{
 	overflow: hidden;
 	widows: 100%;
-	height: 300px;
+	height: 320px;
 	background:#957e78;
 	padding:0;
 }
 	.sections .header .slider{
 		position: relative;
 		overflow: hidden;
-		widows: 100%;
-		height: 300px;
+		width: 100%;
+		height: 100%;
 		background:#957e78;
 		padding:0;
 	}
@@ -467,14 +518,16 @@ input[type="submit"]:hover, button[type="submit"]:hover, .button:hover{
 .sections .intro{
 	overflow: hidden;
 	widows: 100%;
-	height: 100vh;
+	min-height: 100vh;
+	height:auto;
 	background:#957e78;
 	padding:0;
 }
 	.sections .intro .slider{
 		position: relative;
 		overflow: hidden;
-		widows: 100%;
+		width: 100%;
+		min-height: 420px;
 		height: 60vh;
 		background:#957e78;
 		padding:0;
@@ -500,6 +553,21 @@ input[type="submit"]:hover, button[type="submit"]:hover, .button:hover{
 		    z-index: 1;
 		    padding-bottom:26px;
 		}
+			.header .slider-overlay a.logo{
+				position: relative;
+				display: block;
+				width:70%;
+				max-width:250px;
+				height:150px;
+			    background-image: url('/assets/logo.svg');
+			    background-size: contain;
+			    background-position: center;
+			    background-repeat: no-repeat;
+			    margin: 0 auto 0;
+			    z-index: 1;
+			    padding-bottom:0px;
+			}
+
 		.slider-overlay .rest{
 			width: 100%;
 			position: absolute;
@@ -532,7 +600,7 @@ input[type="submit"]:hover, button[type="submit"]:hover, .button:hover{
 	.slide {
 		position: relative;
 	    width: calc(100%/4);
-	    height:60vh;
+	    height: 100%;
 	    list-style: none;
 	    display: inline;
 	    float: left;
@@ -623,8 +691,10 @@ input[type="submit"]:hover, button[type="submit"]:hover, .button:hover{
 	.welcome{
 		width:100%;
 		height:40vh;
+		min-height:270px; 
 		background:url('/assets/bg.jpg');
 		border-top:3px solid #f1c854;
+		box-sizing: border-box;
 	}
 	.zal{
 		position: absolute;
@@ -668,43 +738,175 @@ input[type="submit"]:hover, button[type="submit"]:hover, .button:hover{
 		width:33.33%;
 		min-width: 320px;
 		min-height: 100px;
-		margin:auto;
-		border-bottom:1px solid rgba(255,255,255,0.2);
+		margin:20px auto 0px;
+		padding:20px 0 20px 0;
 	}
 
 		/* НОВОСТИ */
-		.table.news .iteam{
+		.table .iteam{
 			position: relative;
 		}
-			.table.news .iteam .photo{
+			.table .iteam .photo{
 				width:150px;
 				height: 150px;
 				background: #000;
 				float:left;
+				border-radius: 3px;
 			}
-				.table.news .iteam .photo{
+				.table .iteam .photo{
+					position: relative;
 					width:150px;
 					height: 150px;
 					background: #000;
 					float:left;
+					overflow: hidden;
+					box-sizing: border-box;
+					border: 3px solid #fff;
+				}
+				.table .iteam .photo:after{
+					content: '';
+					position: absolute;
+					top:0;
+					left:0;
+					width:150px;
+					height: 150px;
+					box-shadow: inset 0px 0 30px rgba(0,0,0,1);
+				}
+					.table .iteam .photo .time_box{
+						position: absolute;
+						top:0;
+						left:0;
+						margin:25%;
+						width:50%;
+						height:50%;
+						background: #f1c854;
+						color:#000;
+						font-size: 30px;
+						line-height: 30px; 
+						text-align: center;
+						font-weight: bold;
+						padding: 13px;
+						box-sizing: border-box;
+						border-radius: 3px;
+					}
+					.table .iteam .photo .time_box span{
+						display:  block;
+						color:#000;
+						font-size: 16px;
+						line-height: 16px;
+						text-align: center;
+						font-weight: bold;
+						text-transform: uppercase;
+						letter-spacing: 2px;
+					}
+
+			.table .iteam .title{
+				position: absolute;
+				top:20px;
+				left:0;
+				padding:0 20px 0 160px;
+				box-sizing: border-box;
+			}
+				.table .iteam .title .desc{
+					font-size: 14px;
+					font-weight: normal;
+					color: #fff;
 				}
 
-			.table.news .iteam .title{
+			.table .iteam .time{
 				position: absolute;
-				top:0;
-				left:0;
-				padding:0 20px 0 160px;
-				box-sizing: border-box;
-			}
-			.table.news .iteam .time{
-				position: absolute;
-				bottom:0;
+				bottom:20px;
 				left:0;
 				padding:0 20px 0 160px;
 				box-sizing: border-box;
 			}
 
+			.table .iteam .price{
+				position: absolute;
+				bottom:20px;
+				left:0;
+				padding:0 0px 0 160px;
+				font-size:28px; 
+				line-height: 46px;
+				text-align: center;
+				font-weight: bold;
+				color: #fff;
+				box-sizing: border-box;
+				letter-spacing: 1px;
+				box-sizing: border-box;
+			}
 
+				.table .iteam .price span{
+					font-size:18px; 
+				}
+			
+			.table .iteam .add_to_cart{
+				position: absolute;
+				bottom:20px;
+				right:20px;
+				width:100px;
+				height:50px;
+				padding:10px;
+				box-sizing: border-box;
+				background: #f1c854 url(/assets/ico_cart_b.svg) no-repeat;
+				background-size: 30px;
+				background-position: 36px 15px;
+				border-radius: 3px;
+			}
+
+.newsiteam{
+
+}
+	.newsiteam .time{
+		width: 180px;
+		text-align: center;
+		margin: 20px auto;
+		padding:10px;
+		background: #f1c854;
+		font-size: 18px;
+		letter-spacing: 1px;
+		font-weight: bold;
+		color:#000;
+		border-radius: 3px;
+	}
+	.newsiteam .tags{
+		text-align: center;
+		margin: auto;
+		font-size: 18px;
+		letter-spacing: 1px;
+		font-weight: bold;
+		color:#f1c854;
+	}
+	.news .tags{
+		text-align: center;
+		margin: 20px auto 0;
+		font-size: 18px;
+		letter-spacing: 1px;
+		font-weight: bold;
+		color:#f1c854;
+	}
+
+.footer{
+	width:100%;
+	margin:auto;
+	padding: 20px;
+	box-sizing: border-box;
+	text-align: center;
+}
+	.footer span.copy{
+		display: block;
+		margin: 10px 0 0 0;
+	}
+
+.footer:before {
+    display: block;
+    content: '';
+    background-color: #f1c854;
+    width: 60px;
+    height: 3px;
+    margin: 20px auto 40px;
+    z-index: 6;
+}
 
 .button{
 	display: block;
@@ -714,9 +916,13 @@ input[type="submit"]:hover, button[type="submit"]:hover, .button:hover{
 	background: #f1c854;
 	box-sizing: border-box;
 	margin:auto;
+	border-radius: 3px;
 }
 .button:hover{
 	color:#000;
+}
+.admin_button{
+	display: none;
 }
 @-webkit-keyframes bugfix {
     to {
