--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -1,4 +1,6 @@
-footer.html.erb
-<hr>
-VAR1: <%= var1 %>
-VAR2: <%= var2 %>
+<footer class="footer">
+<script src="//yastatic.net/es5-shims/0.0.2/es5-shims.min.js"></script>
+<script src="//yastatic.net/share2/share.js"></script>
+<div class="ya-share2" data-services="vkontakte,facebook,odnoklassniki,twitter" data-counter=""></div>
+<span class="copy">Все права защищены &copy; ХмельХаус</span>
+</footer>
