--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,4 +1,5 @@
 <section class="intro">
+ <%= render partial: 'application/navbar', locals: {back: false}%>
 	<div class="slider">
 			<div class="slider-overlay">
 				<a href="/" class="logo">
@@ -25,5 +26,6 @@
     <div class="welcome">
     	<h1><div class="up">Welcome</div>Добро пожаловать в Хмельхаус!</h1>
     	<a href="/" class="button">Забронировать столик</a>
+    	 <%= render partial: 'application/footer', locals: {var1:"123", var2:"123"}%>
     </div>
 </section>
