--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -6,6 +6,19 @@
   <%= @event.title %>
 </p>
 
+<% if has_image? @event.photos[0] %>
+  <ul class="product-images">
+    <% @event.photos.each do |meta| %>
+      <li class="item">
+        <div class="meta">meta</div>
+        <%= image_tag get_image(meta).image.url, class: 'img-responsive', width: '320' %>
+      </li>
+    <% end %>
+  </ul>
+<% else %>
+  <%= image_tag 'backgrounds/no-image320x240.png', class: 'img-responsive' %>
+<%end%>
+
 <p>
   <strong>Description:</strong>
   <%= @event.description %>
