--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -1,9 +1,9 @@
 <div class="header">
   <div class="slider">
       <div class="slider-overlay">
-        <a href="/" class="logo">
+        <a href="/" class="logo animated flipInY">
         </a>
-        <h1><div class="up"><%= h1up %></div><%= h1 %></h1>
+        <h1 class="animated fadeInUp"><div class="up"><%= h1up %></div><%= h1 %></h1>
       </div>
       <ul class="slidewrapper"> 
         <%if defined?(image_url)=="local-variable"%>
