--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -18,3 +18,5 @@
 </div>
 <%= link_to 'New Product', new_product_path %>
 </div>
+ <%= render partial: 'application/footer', locals: {var1:"123", var2:"123"}%>
+ </section>
