--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,6 +1,6 @@
 <section class="news">
- <%= render partial: 'application/navbar', locals: {back: true}%>
- <%= render partial: 'application/header', locals: {h1:@product.title, h1up:"Menu", bg:"", image_url: get_image(@product.photos[0]).image.url }%>
+ <%= render partial: 'application/navbar', locals: {back: true, back_url: products_path}%>
+ <%= render partial: 'application/header', locals: {h1:@product.title, h1up:"Menu", bg:"", image_url: (get_image(@product.photos[0]).nil? ? '' : get_image(@product.photos[0]).image.url) }%>
 <div class="content">
 <p>
   <strong>Title:</strong>
