--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -87,6 +87,18 @@ body {
 	text-align: left;
 	background:#000 url('/assets/bg.jpg') center;
 	-webkit-animation: bugfix infinite 1s;
+	-webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    -ms-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    transition: all 0.3s;
+}
+body #map{
+    -webkit-transition: none;
+    -moz-transition: none;
+    -ms-transition: none;
+    -o-transition: none;
+    transition: none;
 }
 h1{
 	font-size:28px;
@@ -125,7 +137,7 @@ h2{
 }
 
 h3{
-  font-size: 18px;
+  font-size: 16px;
   color: #fff;
   font-weight: bold;
   text-transform: uppercase;
@@ -503,7 +515,6 @@ option, select{
 	overflow: hidden;
 	widows: 100%;
 	height: 320px;
-	background:#957e78;
 	padding:0;
 }
 	.sections .header .slider{
@@ -511,7 +522,6 @@ option, select{
 		overflow: hidden;
 		width: 100%;
 		height: 100%;
-		background:#957e78;
 		padding:0;
 	}
 
@@ -520,7 +530,6 @@ option, select{
 	widows: 100%;
 	min-height: 100vh;
 	height:auto;
-	background:#957e78;
 	padding:0;
 }
 	.sections .intro .slider{
@@ -529,7 +538,6 @@ option, select{
 		width: 100%;
 		min-height: 420px;
 		height: 60vh;
-		background:#957e78;
 		padding:0;
 	}
 	.slider-overlay {
@@ -808,7 +816,7 @@ option, select{
 				box-sizing: border-box;
 			}
 				.table .iteam .title .desc{
-					font-size: 14px;
+					font-size: 13px;
 					font-weight: normal;
 					color: #fff;
 				}
@@ -823,11 +831,11 @@ option, select{
 
 			.table .iteam .price{
 				position: absolute;
-				bottom:20px;
-				left:0;
+				bottom:70px;
+				left:0px;
 				padding:0 0px 0 160px;
-				font-size:28px; 
-				line-height: 46px;
+				font-size:16px; 
+				line-height: 16px;
 				text-align: center;
 				font-weight: bold;
 				color: #fff;
@@ -837,20 +845,20 @@ option, select{
 			}
 
 				.table .iteam .price span{
-					font-size:18px; 
+					font-size:12px; 
 				}
 			
 			.table .iteam .add_to_cart{
 				position: absolute;
 				bottom:20px;
-				right:20px;
+				left:160px;
 				width:100px;
-				height:50px;
+				height:45px;
 				padding:10px;
 				box-sizing: border-box;
 				background: #f1c854 url(/assets/ico_cart_b.svg) no-repeat;
 				background-size: 30px;
-				background-position: 36px 15px;
+				background-position: 36px 12px;
 				border-radius: 3px;
 			}
 
@@ -885,6 +893,72 @@ option, select{
 		font-weight: bold;
 		color:#f1c854;
 	}
+
+.search {
+		position: relative;
+		min-height: 40px;
+		margin:20px auto 0;
+		width:190px;
+		height:38px;
+		z-index: 5;
+		color:#000;
+	}	
+	.search ul {
+		width: 180px;
+		padding: 0 5px 0 5px;
+		position: absolute;
+		top: 0;
+		left: 0;
+		background: #f1c854;
+		border-radius: 5px;
+	}
+	.search li {
+		display: none; /* скрыть все <li> пункты */
+		color:#000;
+		width: 180px;
+	    text-align: center;
+	    padding: 10px;
+	    background: #f1c854;
+	    font-size: 18px;
+	    letter-spacing: 1px;
+	    font-weight: bold;
+	    border-radius: 3px;
+	    box-sizing: border-box;
+	    cursor: pointer;
+	}
+	.search li:hover {
+		background:#d3ab38;
+	}
+	.search .current {
+		display: block; /* показывать только текущие активные <li> пункты */
+	}
+	.search a {
+		display: block;
+		width:100%;
+		height: 100%;
+		text-decoration: none;
+		color:#000;
+		font-size: 16px;
+		font-weight: normal;
+	}
+	.search.current a {
+		background: none;
+		color: #666;
+	}
+ 
+	/* при наведении на пункты меню */
+	.search ul:hover {
+		background-image: none;
+		box-shadow: 0 0 100px rgba(0,0,0,1);
+	}
+	.search ul:hover li {
+		display: block;
+		margin: 0 0 5px;
+	}
+	.search ul:hover .current {
+		background: url(images/icon-check.png) no-repeat 10px 7px;
+	}
+ 
 
 .footer{
 	width:100%;
@@ -929,7 +1003,16 @@ option, select{
       padding: 0;
     }
 }
-
+@media screen and (max-width: 980px) {
+	.table{
+		max-width: 640px; 
+	}
+}
+@media screen and (max-width: 660px) {
+	.table{
+		max-width: 320px; 
+	}
+}
 @media screen and (max-width: 480px) {
 
 	.slider-overlay .rest{
