--- a/app/views/devise/menu/_login_items.html.erb
+++ b/app/views/devise/menu/_login_items.html.erb
@@ -1,5 +1,5 @@
 <% if user_signed_in? %>
-  <%= link_to('Logout', destroy_user_session_path, method: :get) %>        
+  <%= link_to('Выход', destroy_user_session_path, method: :get) %>        
 <% else %>
-  <%= link_to('Login', new_user_session_path)  %>  
+  <%= link_to('Вход', new_user_session_path)  %>  
 <% end %>
