--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,8 +1,8 @@
 <section class="news">
- <%= render partial: 'application/navbar', locals: {back: true}%>
+ <%= render partial: 'application/navbar', locals: {back: false}%>
  <%= render partial: 'application/header', locals: {h1:"Редактирование новости", h1up:"News"}%>
 <div class="content">
-	<%= render 'form', event: @event %>
+	<%= render 'form', event: @event, gallery: @gallery  %>
 	<%= link_to 'Show', @event %>
 </div>
  <%= render partial: 'application/footer', locals: {var1:"123", var2:"123"}%>
